# caf_shiviz_trial

./: .gitignore  .gitmodules  CMakeLists.txt  CustomCafCMakeLists.txt  README.md  TODO_LIST.txt  build.sh  clean_logs.sh  fix_tracing_data_factory.patch  run.sh  run_caf-vec.sh
include/: args.hpp  create_span.hpp  create_tracer.hpp  error.hpp  extract.hpp  inject.hpp  setup_tracer.hpp  source_location.hpp  test_profiler.hpp  test_tracing_data.hpp  test_tracing_data_factory.hpp  upper.hpp
include/tracer/: get.hpp  put.hpp
scripts/: build_caf.sh
src/: args.cpp  create_span.cpp  create_tracer.cpp  error.cpp  extract.cpp  inject.cpp  main.cpp  setup_tracer.cpp  test_profiler.cpp  test_tracing_data.cpp  test_tracing_data_factory.cpp  upper.cpp
src/tracer/: get.cpp  put.cpp
